グレゴリオ暦と帝國火星曆とを相互に變換するAPI
